--- a/_includes/themes/lanyon/head.html
+++ b/_includes/themes/lanyon/head.html
@@ -26,4 +26,14 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <script>
+    !function(a,b,c,d){
+       b._mrm=b._mrm||{},
+       b._mrm.hostId=a,
+       d=c.createElement("script"),
+       d.async=1,
+       d.src="//umrum.io/dist/umrum-client.js"
+       c.body.appendChild(d);
+     }("551c922d88c3292b4e03dc1a",window,document);
+  </script>
 </head>
