Changing umrum script place

--- a/_includes/themes/lanyon/default.html
+++ b/_includes/themes/lanyon/default.html
@@ -45,4 +45,14 @@
     </script>
     {% include JB/analytics %}
   </body>
+  <script>
+    !function(a,b,c,d){
+       b._mrm=b._mrm||{},
+       b._mrm.hostId=a,
+       d=c.createElement("script"),
+       d.async=1,
+       d.src="//umrum.io/dist/umrum-client.js"
+       c.body.appendChild(d);
+     }("551c922d88c3292b4e03dc1a",window,document);
+  </script>
 </html>
